# sussg

./: .editorconfig  .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  config.toml  flake.nix  justfile
.github/workflows/: main.yml  release.yml
content/: index.md  install.md  outside.md  usage.md
content/example/: index.md
content/higher/: index.md
content/posts/: post_test.md  post_test2.md
docs/: config.toml
docs/content/: index.md  install.md
docs/content/posts/: draft-test.md  install.md  usage.md
docs/plugins/: 3d_viewer.html
docs/public/: fonts.css  index.html  main.css
docs/public/install/: index.html
docs/public/usage/: index.html
docs/styles/: main.css
docs/templates/: base.html
src/: build.rs  config.rs  convert.rs  errors.rs  fs.rs  init.rs  lib.rs  main.rs  md_to_html.rs  post_process.rs  serve.rs  toml_stuff.rs  utils.rs
src/cmd/: build.rs  init.rs  serve.rs
styles/: fonts.css  main.css
templates/: base.html  short.html
